fixed viewport height issue on mobile browsers

--- a/src/components/navMenu/NavMenu.scss
+++ b/src/components/navMenu/NavMenu.scss
@@ -1,7 +1,7 @@
 #nav-menu {
   background-color: #282c34;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: flex-start;
   flex-flow: column nowrap;
   width: 100%;
@@ -12,15 +12,22 @@
   top: 0;
 
   .nav-item {
-    text-decoration: none;
-    color: #fff;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
 
-    &:hover {
-      text-decoration: overline;
-    }
+    .nav-item-link {
+      text-decoration: none;
+      color: #fff;
 
-    &.active {
-      text-decoration: line-through;
+      &:hover {
+        text-decoration: overline;
+      }
+
+      &.active {
+        text-decoration: line-through;
+      }
     }
   }
 }
